<resources>
    <string name="app_name">Prueba1</string>
    <string name="informacion">Ingrese Información del vehículo</string>
    <string name="patente">Patente:</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="año">Año:</string>
    <string name="UF">Valor UF:</string>
    <string name="antiguedad">Antiguedad:</string>
    <string name="estado">Estado:</string>
    <string name="valorSeguro">Valor seguro:</string>
    <string name="btn_enviar">Enviar</string>
    <string name="datos_ingresados">Datos del Vehiculo</string>

</resources>
